--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@
     --building-color2: #66cc99;/*Variable color 2*/
     --building-color3: #cc6699;
     --building-color4: #538cc6;
+    --window-color1: black;
+    --window-color2: #8cd9b3;
 }
 
 *{
@@ -16,13 +18,7 @@ body{
     overflow: hidden;
 }
 
-.background-buildings{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-evenly;
-}
+/*BACKGROUND BUILDINGS - "bb" stands for "background building"*/
 
 /*BUILDING 1 (bb1)*/
 
@@ -34,28 +30,27 @@ body{
     align-items: center;    
 }
 
-.bb1a{
-    width: 70%;
+.bb1-window{
     height: 10%;
-    background-color: var(--building-color1);/*here's the use of the variable*/
+    background: linear-gradient(var(--building-color1), var(--window-color1));
+}
+
+.bb1a{
+    width: 70%;   
 }
 
 .bb1b{
-    width: 80%;
-    height: 10%;
-    background-color: var(--building-color1);/*here's the use of the variable 1*/
+    width: 80%;    
 }
 
 .bb1c{
-    width: 90%;
-    height: 10%;
-    background-color: var(--building-color1);/*here's the use of the variable 1*/
+    width: 90%;   
 }
 
 .bb1d{
     width: 100%;
-    height: 70%;
-    background-color: var(--building-color1);/*here's the use of the variable 1*/
+    height: 70%;    
+    background: linear-gradient(var(--building-color1)50%, var(--window-color1));
 }
 
 /*BUILDING 2 (bb2)*/
@@ -64,6 +59,11 @@ body{
     width: 10%;
     height: 50%;
     background-color: var(--building-color2);/*Variable color 2*/
+}
+
+.bb2b{
+    width: 100%;
+    height: 100%;
 }
 
 /*BUILDING 3 (bb3)*/
@@ -82,11 +82,56 @@ body{
     background-color: var(--building-color4);
 }
 
-/*FOREGROUND BUILDINGS*/
+/*FOREGROUND BUILDINGS - "fb" stands for "foreground building" */
 
-.foreground-buildings{
+.fb1{
+    width: 10%;
+    height: 60%;
+    background-color: var(--building-color4);
+}
+
+.fb2{
+    width: 10%;
+    height: 40%;
+    background-color: var(--building-color3);
+}
+
+.fb3{
+    width: 10%;
+    height: 35%;
+    background-color: var(--building-color1);
+}
+
+.fb4{
+    width: 8%;
+    height: 45%;
+    background-color: var(--building-color1);
+    position: relative;
+    left: 10%;
+}
+
+.fb5{
+    width: 10%;
+    height: 33%;
+    background-color: var(--building-color2);
+    position: relative;
+    right: 10%;
+}
+
+.fb6{
+    width: 9%;
+    height: 38%;
+    background-color: var(--building-color3);
+}
+
+/*BACKGROUND AND FOREGROUND BUILDINGS*/
+
+.background-buildings, .foreground-buildings{
     width: 100%;
     height: 100%;
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-evenly;
     position: absolute;
     top: 0;
 }
