--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,16 @@ body{
     justify-content: space-evenly;
 }
 
+.sky{
+    background: radial-gradient(
+        circle closest-corner at 15% 15%,
+        #ffcf33,
+        #ffcf33 20%,
+        #ffff66 21%,
+        #bbeeff 100%
+    );
+}
+
 /*BACKGROUND BUILDINGS - "bb" stands for "background building"*/
 
 /*BUILDING 1 (bb1)*/
@@ -294,6 +304,34 @@ body{
             var(--window-color3)10%,
             var(--window-color3)30%
     );
+}
+
+/* R E S P O N S I V E */
+
+/*This turns the day into night*/
+@media (max-width: 1000px){
+
+    /*VARIABLES AT NIGHT*/
+    :root{
+        --building-color1: #000;/*Variables begin with two dashes (--) and a name (color1)*/
+        --building-color2: #000;/*Variable color 2*/
+        --building-color3: #000;
+        --building-color4: #000;
+        --window-color1: #777;
+        --window-color2: #777;
+        --window-color3: #777;
+        --window-color4: #777;
+    }
+
+    .sky{
+        background: radial-gradient(
+            circle closest-corner at 15% 15%,
+            #ccc,
+            #ccc 20%,
+            #445 21%,
+            #223 100%
+        );
+    }
 }
 
 
